[package]
name = "fountain_codes"
version = "0.1.0"
authors = ["Gregor Peach <gregorpeach@gmail.com>"]
license = "MIT"
description = "Fountain codes implemented in Rust"

repository = "https://github.com/Others/fountain_codes"
keywords = ["encoding", "erasure code", "fountain code"]

[dependencies]
rand = "0.3.15"

[profile.release]
debug = true